# teman-wisata

./: .eslintrc.json  .example.env  .gitignore  .image-tag  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  main.py  pyproject.toml
.github/: pull_request_template.md  pull_request_template.yaml
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml  task.yaml
.github/workflow/: lint.yaml  lint_and_test.yaml  security.yaml
.github/workflows/: build_image.yaml  lint.yaml  security.yaml  tes-koneksi.yaml  test.yaml  update_deployment.yaml  update_manifest_k3s.yaml  version_update.yaml
app/: __init__.py  main.py
app/api/: __init__.py
app/auth/: __init__.py  di.py  schema.py  service.py
app/core/: __init__.py  config.py  utils.py
app/infrastructure/: __init__.py  di.py  mlflow_recommender.py  mlflow_rectools.py  redis_client.py  supabase_client.py
app/model/: __init__.py  place.py  user.py
app/place/: __init__.py  schema.py  service.py
app/recommender/: __init__.py  schema.py  service.py
app/tests/: __init__.py  conftest.py
app/utils/: __init__.py  project_version.py
deployment/docker/: Dockerfile
docs/changelog/: CHANGELOG.md
k3s-manifest/app-deploy/: deploy.yaml  ingress-fastapi.yaml  rand-secret.yaml  supabase-secret.yaml
k3s-manifest/grafana/: grafana.yaml  ingress.yaml  tls-grafana.yaml
k3s-manifest/ingress-nginx/: baremetal-deploy.yaml
supabase/: config.toml
supabase/seeder/: user.sql  (+3 more)
ui/: eslint.config.ts  index.html  package-lock.json  package.json  place.html  places.html  recommender.html  tsconfig.json  vite.config.ts
(+100 files in other folders)
